--- a/SafeApp/package.json
+++ b/SafeApp/package.json
@@ -1,1 +1,1 @@
-{"name":"SafeApp","version":"0.0.1","private":true,"scripts":{"start":"node node_modules/react-native/local-cli/cli.js start"},"dependencies":{"react-native":"0.78.0"}}
+{"name":"SafeApp","version":"0.0.1","private":true,"scripts":{"start":"node node_modules/react-native/local-cli/cli.js start"},"dependencies":{"@react-native-community/geolocation":"^3.4.0","react-native":"0.78.0"}}
